--- a/TeduShop.Web/Views/ShoppingCart/Index.cshtml
+++ b/TeduShop.Web/Views/ShoppingCart/Index.cshtml
@@ -56,6 +56,7 @@
                                         <th colspan="7" class="text-right">Tổng tiền:</th>
                                         <th id="totalPriceShopping"></th>
                                     </tr>
+
                                 </tfoot>
                             </table>
 
@@ -75,6 +76,7 @@
 
             </div>
             <!-- /.container -->
+        </div>
         </div>
 
         <script id="tmpShoppingContent" type="x-tmpl-mustache">
