--- a/TeduShop.Web/Views/Shared/Header.cshtml
+++ b/TeduShop.Web/Views/Shared/Header.cshtml
@@ -54,7 +54,7 @@
                     {
 
                         @Html.AntiForgeryToken();
-                        @Html.ValidationSummary(false, "", new { @class = "error" });
+                     
                         <div class="form-group">
                             @Html.TextBox("UserName", null,new { @class = "form-control", @id = "UserName" })
                         </div>
@@ -102,8 +102,8 @@ _________________________________________________________ -->
                     <span class="sr-only">Toggle search</span>
                     <i class="fa fa-search"></i>
                 </button>
-                <a class="btn btn-default navbar-toggle" href="basket.html">
-                    <i class="fa fa-shopping-cart"></i>  <span class="hidden-xs">3 items in cart</span>
+                <a class="btn btn-default navbar-toggle" href="/basket.html">
+                    <i class="fa fa-shopping-cart"></i>  <span class="hidden-xs" id="countShopping">@Model.CountShopping</span>
                 </a>
             </div>
         </div>
@@ -210,7 +210,7 @@ _________________________________________________________ -->
         <div class="navbar-buttons">
 
             <div class="navbar-collapse collapse right" id="basket-overview">
-                <a href="basket.html" class="btn btn-primary navbar-btn"><i class="fa fa-shopping-cart"></i><span class="hidden-sm">3 items in cart</span></a>
+                <a href="basket.html" class="btn btn-primary navbar-btn"><i class="fa fa-shopping-cart"></i><span class="hidden-sm">@Model.CountShopping</span></a>
             </div>
             <!--/.nav-collapse -->
 
