--- a/TeduShop.Web/Views/Product/PromotionProduct.cshtml
+++ b/TeduShop.Web/Views/Product/PromotionProduct.cshtml
@@ -23,7 +23,7 @@
                     <li>
                         <a href="/index.html">Home</a>
                     </li>
-                    <li>Sản phẩm nổi bật</li>
+                    <li>Sản phẩm khuyến mãi</li>
                 </ul>
 
 
