--- a/TeduShop.Web/Views/Contact/Index.cshtml
+++ b/TeduShop.Web/Views/Contact/Index.cshtml
@@ -3,14 +3,7 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/Layouts.cshtml";
 }
-@section JavaScriptLayout {
-    <script src="/Assets/client/js/jquery.cookie.js"></script>
-    <script src="/Assets/client/js/waypoints.min.js"></script>
-    <script src="/Assets/client/js/modernizr.js"></script>
-    <script src="/Assets/client/js/bootstrap-hover-dropdown.js"></script>
-    <script src="/Assets/client/js/owl.carousel.min.js"></script>
-    <script src="/Assets/client/js/front.js"></script>
-}
+
 
     <div id="all">
 
@@ -90,7 +83,7 @@
             </div>
             <!-- /.container -->
         </div>
-
+</div>
        
 
         <script>
