--- a/TeduShop.Web/Views/Shared/Layouts.cshtml
+++ b/TeduShop.Web/Views/Shared/Layouts.cshtml
@@ -72,9 +72,14 @@
     <script src="~/Scripts/mustache.js"></script>
     <script src="~/Scripts/numeral/numeral.min.js"></script>
     <script src="/Assets/client/js/bootstrap.min.js"></script>
-
     <script src="~/Assets/client/js/common.js"></script>
 
+    <script src="/Assets/client/js/jquery.cookie.js"></script>
+    <script src="/Assets/client/js/waypoints.min.js"></script>
+    <script src="/Assets/client/js/modernizr.js"></script>
+    <script src="/Assets/client/js/bootstrap-hover-dropdown.js"></script>
+    <script src="/Assets/client/js/owl.carousel.min.js"></script>
+    <script src="/Assets/client/js/front.js"></script>
 
     @RenderSection("JavaScriptLayout", required: false)
 
