--- a/TeduShop.Web/Views/Shared/Header.cshtml
+++ b/TeduShop.Web/Views/Shared/Header.cshtml
@@ -210,7 +210,7 @@ _________________________________________________________ -->
         <div class="navbar-buttons">
 
             <div class="navbar-collapse collapse right" id="basket-overview">
-                <a href="basket.html" class="btn btn-primary navbar-btn"><i class="fa fa-shopping-cart"></i><span class="hidden-sm">@Model.CountShopping</span></a>
+                <a href="/basket.html" class="btn btn-primary navbar-btn"><i class="fa fa-shopping-cart"></i><span class="hidden-sm">@Model.CountShopping</span></a>
             </div>
             <!--/.nav-collapse -->
 
