--- a/TeduShop.Web/Views/ShoppingCart/Index.cshtml
+++ b/TeduShop.Web/Views/ShoppingCart/Index.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/Layouts.cshtml";
 }
 @section JavaScriptLayout {
-    <script src="~/Assets/client/js/shoppingCart.js"></script>
+    @Scripts.Render("~/js/shoppingcart");
 }
 
 
