--- a/TeduShop.Web/Views/Account/Register.cshtml
+++ b/TeduShop.Web/Views/Account/Register.cshtml
@@ -1,6 +1,8 @@
 ﻿@model TeduShop.Web.Models.RegisterViewModel
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Đăng ký";
+    ViewBag.MetaKeyword = "Đăng ký tài khoản";
+    ViewBag.MetaDiscription = "Đăng ký tài khoản online để mua hàng thời trang nữ";
     Layout = "~/Views/Shared/Layouts.cshtml";
 }
 
