--- a/TeduShop.Web/Views/Checkout/Index.cshtml
+++ b/TeduShop.Web/Views/Checkout/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Thanh toán";
+    ViewBag.MetaKeyword = "Cảm ơn quý khách đã mua hàng";
+    ViewBag.MetaDiscription = "Cảm ơn quá khách đã ủng hộ website";
     Layout = "~/Views/Shared/Layouts.cshtml";
 }
 @section JavaScriptLayout {
