--- a/TeduShop.Web/Views/Checkout/OverViewResult.cshtml
+++ b/TeduShop.Web/Views/Checkout/OverViewResult.cshtml
@@ -1,6 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "OverViewResult";
+    ViewBag.Title = "Xem lại đơn hàng";
+    ViewBag.MetaKeyword = "Mời quý khách xem lại đơn hàng thời trang";
+    ViewBag.MetaDiscription = "Quý khách xem lại đơn hàng quần áo trước khi thanh toán";
     Layout = "~/Views/Shared/Layouts.cshtml";
     var totalPayment = (decimal)ViewBag.totalPrice;
     var transferTax = (string)ViewBag.transferTax;
