--- a/TeduShop.Web/Views/Contact/Index.cshtml
+++ b/TeduShop.Web/Views/Contact/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@model TeduShop.Web.Models.SupportOnlineViewModel
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Liên hệ";
+    ViewBag.MetaKeyword = "Thông tin liên hệ của shop";
+    ViewBag.MetaDiscription = "Quý khách có bất cứ thắc mắc nào xin liên hệ Shop";
     Layout = "~/Views/Shared/Layouts.cshtml";
 }
 
