--- a/TeduShop.Web/Views/ShoppingCart/Index.cshtml
+++ b/TeduShop.Web/Views/ShoppingCart/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Giở hàng";
+    ViewBag.MetaKeyword = "Giở hàng thời trang nữ";
+    ViewBag.MetaDiscription = "Quý khách xem qua giỏ hàng thời trang của mình";
     Layout = "~/Views/Shared/Layouts.cshtml";
 }
 @section JavaScriptLayout {
