--- a/TeduShop.Web/Views/Post/Detail.cshtml
+++ b/TeduShop.Web/Views/Post/Detail.cshtml
@@ -1,6 +1,8 @@
 ﻿@model TeduShop.Web.Models.PostViewModel
 @{
-    ViewBag.Title = "Detail";
+    ViewBag.Title = Model.Name;
+    ViewBag.MetaKeyword = Model.MetaKeyword;
+    ViewBag.MetaDiscription = Model.MetaDiscription;
     Layout = "~/Views/Shared/Layouts.cshtml";
 
 }
