--- a/TeduShop.Web/Views/Shared/Layouts.cshtml
+++ b/TeduShop.Web/Views/Shared/Layouts.cshtml
@@ -12,10 +12,10 @@
     <meta name="keywords" content="">
 
     <title>
-        Obaju : e-commerce template
+        @ViewBag.Title
     </title>
-
-    <meta name="keywords" content="">
+    <meta name="keywords" content="@ViewBag.MetaKeyword">
+    <meta name="discription" content="@ViewBag.MetaDiscription">
 
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,300,100' rel='stylesheet' type='text/css'>
 
