--- a/TeduShop.Web/Views/ShoppingCart/Index.cshtml
+++ b/TeduShop.Web/Views/ShoppingCart/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
-    ViewBag.Title = "Giở hàng";
-    ViewBag.MetaKeyword = "Giở hàng thời trang nữ";
+    ViewBag.Title = "Giỏ hàng";
+    ViewBag.MetaKeyword = "Giỏ hàng thời trang nữ";
     ViewBag.MetaDiscription = "Quý khách xem qua giỏ hàng thời trang của mình";
     Layout = "~/Views/Shared/Layouts.cshtml";
 }
