--- a/TeduShop.Web/Views/Account/Register.cshtml
+++ b/TeduShop.Web/Views/Account/Register.cshtml
@@ -1,8 +1,8 @@
 ﻿@model TeduShop.Web.Models.RegisterViewModel
 @{
     ViewBag.Title = "Đăng ký";
-    ViewBag.MetaKeyword = "Đăng ký tài khoản";
-    ViewBag.MetaDiscription = "Đăng ký tài khoản online để mua hàng thời trang nữ";
+    ViewBag.MetaKeyword = "Đăng ký, thời trang nữ, thời trang nữ đẹp, đầm váy, áo sơ mi ";
+    ViewBag.MetaDiscription = "Đăng ký tài khoản online để mua hàng thời trang nữ, sản phầm đủ chủng loại đầm váy, áo sơ mi ngắn tay, dài tay, quần jean, quần tây..";
     Layout = "~/Views/Shared/Layouts.cshtml";
 }
 
