--- a/TeduShop.Web/Views/Checkout/Index.cshtml
+++ b/TeduShop.Web/Views/Checkout/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿
 @{
     ViewBag.Title = "Thanh toán";
-    ViewBag.MetaKeyword = "Cảm ơn quý khách đã mua hàng";
-    ViewBag.MetaDiscription = "Cảm ơn quá khách đã ủng hộ website";
+    ViewBag.MetaKeyword = "Thanh toán, quần áo nữ, đầm váy, áo sơ mi, áo thun, quần các loại, thời trang nữ";
+    ViewBag.MetaDiscription = "Cảm ơn quá khách đã ủng hộ website mong quý khách thường xuyên ghé thêm website để mua các sản phầm thời trang nữ shop kinh doanh" +
+                "đủ loại gồm: đầm váy thời trang, áo sơ mi nữ, quân jean nữ, quần tây nữ, áo thun nữ giá rẻ.";
     Layout = "~/Views/Shared/Layouts.cshtml";
 }
 @section JavaScriptLayout {
