--- a/TeduShop.Web/Views/Checkout/OverViewResult.cshtml
+++ b/TeduShop.Web/Views/Checkout/OverViewResult.cshtml
@@ -1,8 +1,9 @@
 ﻿
 @{
     ViewBag.Title = "Xem lại đơn hàng";
-    ViewBag.MetaKeyword = "Mời quý khách xem lại đơn hàng thời trang";
-    ViewBag.MetaDiscription = "Quý khách xem lại đơn hàng quần áo trước khi thanh toán";
+    ViewBag.MetaKeyword = "Xem lại đơn hàng, áo sơ mi nữ đẹp, áo thun nữ, quần tây nữ , quần jean nữ, dầm váy, dam vay";
+    ViewBag.MetaDiscription = "Quý khách xem lại đơn hàng quần áo trước khi thanh toán, Sản phầm thời trang của shop sẽ luôn được cập nhật mới nhất với đầy" +
+                "đủ chủng loại: đầm váy , áo sơ mi , áo thun, quần jean, quần tây,...";
     Layout = "~/Views/Shared/Layouts.cshtml";
     var totalPayment = (decimal)ViewBag.totalPrice;
     var transferTax = (string)ViewBag.transferTax;
