--- a/TeduShop.Web/Views/Contact/Index.cshtml
+++ b/TeduShop.Web/Views/Contact/Index.cshtml
@@ -1,8 +1,10 @@
 ﻿@model TeduShop.Web.Models.SupportOnlineViewModel
 @{
     ViewBag.Title = "Liên hệ";
-    ViewBag.MetaKeyword = "Thông tin liên hệ của shop";
-    ViewBag.MetaDiscription = "Quý khách có bất cứ thắc mắc nào xin liên hệ Shop";
+    ViewBag.MetaKeyword = "Liên hệ shop, thời trang nữ online, thời trang nữ 24h, thời trang nữ giá rẻ," +
+                " thời trang trẻ dành cho nữ, thời trang nữ trung niên,thời trang nữ xinh";
+    ViewBag.MetaDiscription = "Quý khách có bất cứ thắc mắc nào xin liên hệ Shop ,Shop sẽ hỗ trợ mọi thắc mắc của quý khách," +
+                " để mang lại những sản phầm thời trang chất lượng nhất cho các chị em.";
     Layout = "~/Views/Shared/Layouts.cshtml";
 }
 
