--- a/TeduShop.Web/Views/ShoppingCart/Index.cshtml
+++ b/TeduShop.Web/Views/ShoppingCart/Index.cshtml
@@ -1,8 +1,10 @@
 ﻿
 @{
     ViewBag.Title = "Giỏ hàng";
-    ViewBag.MetaKeyword = "Giỏ hàng thời trang nữ";
-    ViewBag.MetaDiscription = "Quý khách xem qua giỏ hàng thời trang của mình";
+    ViewBag.MetaKeyword = "Giỏ hàng thời trang nữ, mua quần áo nữ online, mua quần áo nữ 24h, shop thời trang nữ online, shop thời trang nữ," +
+                " shop thời trang dành cho nữ, shop kinh doanh quần áo nữ online, shop bán quần áo nữ";
+    ViewBag.MetaDiscription = "Quý khách xem qua giỏ hàng thời trang của mình. Cảm ơn quý khách đã tin tưởng shop," +
+                " Nếu quý khách có nhu cầu mua sắm quần áo nữ mong quý khách ủng hộ shop, Shop chân thành cảm ơn quý khách. Chú quý khách nhiều niềm vui.";
     Layout = "~/Views/Shared/Layouts.cshtml";
 }
 @section JavaScriptLayout {
