--- a/DamvayShop.Web/Views/Contact/Index.cshtml
+++ b/DamvayShop.Web/Views/Contact/Index.cshtml
@@ -37,7 +37,7 @@
                         <div class="col-sm-4">
                             <h3><i class="fa fa-map-marker"></i>Địa chỉ</h3>
                             <p>
-                                123 Trường Sa, Phường 3, Quận Bình Thạnh, TP.Hồ Chí Minh
+                                Nguyễn Xí, Phường 26, Quận Bình Thạnh, TP.Hồ Chí Minh.
                             </p>
                         </div>
                         <!-- /.col-sm-4 -->
