--- a/DamvayShop.Web/Views/Shared/Header.cshtml
+++ b/DamvayShop.Web/Views/Shared/Header.cshtml
@@ -89,9 +89,9 @@ _________________________________________________________ -->
     <div class="container">
         <div class="navbar-header">
 
-            <a class="navbar-brand home" href="index.html" data-animate-hover="bounce">
-                <img src="/Assets/client/img/logo.png" alt="Obaju logo" class="hidden-xs">
-                <img src="/Assets/client/img/logo-small.png" alt="Obaju logo" class="visible-xs"><span class="sr-only">Obaju - go to homepage</span>
+            <a class="navbar-brand home" href="/index.html" data-animate-hover="bounce">
+                <img src="" alt="DAMVAY.VN" class="hidden-xs">
+                <img src="" alt="DAMVAY.VN" class="visible-xs"><span class="sr-only">damvay.vn-Trang chủ</span>
             </a>
             <div class="navbar-buttons">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation">
