--- a/DamvayShop.Web/Views/Shared/Header.cshtml
+++ b/DamvayShop.Web/Views/Shared/Header.cshtml
@@ -90,8 +90,8 @@ _________________________________________________________ -->
         <div class="navbar-header">
 
             <a class="navbar-brand home" href="/index.html" data-animate-hover="bounce">
-                <img src="/UploadedFiles/Avatars/logo.png" alt="DAMVAY.VN" class="hidden-xs">
-                <img src="/UploadedFiles/Avatars/logo2.png" alt="DAMVAY.VN" class="visible-xs"><span class="sr-only">damvay.vn-Trang chủ</span>
+                <img src="" alt="DAMVAY.VN" class="hidden-xs">
+                <img src="" alt="DAMVAY.VN" class="visible-xs"><span class="sr-only">damvay.vn-Trang chủ</span>
             </a>
             <div class="navbar-buttons">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation">
