--- a/DamvayShop.Web/Views/Shared/Header.cshtml
+++ b/DamvayShop.Web/Views/Shared/Header.cshtml
@@ -54,15 +54,15 @@
                     {
 
                         @Html.AntiForgeryToken();
-                     
+
                         <div class="form-group">
-                            @Html.TextBox("UserName", null,new { @class = "form-control", @id = "UserName" })
+                            @Html.TextBox("UserName", null, new { @class = "form-control", @id = "UserName" })
                         </div>
 
                         <div class="form-group">
-                            @Html.Password("Password",null, new { @class = "form-control", @id = "Password" })
+                            @Html.Password("Password", null, new { @class = "form-control", @id = "Password" })
                         </div>
-                       
+
                         <div class="form-group">
                             Lưu mật khẩu:   @Html.CheckBox("RememberMe")
                         </div>
@@ -103,18 +103,29 @@ _________________________________________________________ -->
                     <i class="fa fa-search"></i>
                 </button>
                 <a class="btn btn-default navbar-toggle" href="/basket.html">
-                    <i class="fa fa-shopping-cart"></i>  <span class="hidden-xs" id="countShopping">@Model.CountShopping</span>
+                    <i class="fa fa-shopping-cart"></i>  <span class="hidden-xs" id="countShopping">
+                        @{ if (Model.CountShopping > 0)
+                            {
+                                @Model.CountShopping;
+                            }
+                         }
+                    </span>
                 </a>
             </div>
         </div>
         <!--/.navbar-header -->
-        @{Html.RenderAction("CategoryHeader", "Home");}      
+        @{Html.RenderAction("CategoryHeader", "Home");}
         <!--/.nav-collapse -->
 
         <div class="navbar-buttons">
 
             <div class="navbar-collapse collapse right" id="basket-overview">
-                <a href="/basket.html" class="btn btn-primary navbar-btn"><i class="fa fa-shopping-cart"></i><span class="hidden-sm">@Model.CountShopping</span></a>
+                <a href="/basket.html" class="btn btn-primary navbar-btn"><i class="fa fa-shopping-cart"></i><span class="hidden-sm">@{
+                    if (Model.CountShopping > 0)
+                    {
+                        @Model.CountShopping;
+                    }
+                        } </span></a>
             </div>
             <!--/.nav-collapse -->
 
