--- a/DamvayShop.Web/Views/Contact/Index.cshtml
+++ b/DamvayShop.Web/Views/Contact/Index.cshtml
@@ -29,7 +29,7 @@
                 <div class="box" id="contact">
                     <h1>Liên hệ</h1>
 
-                    <p class="lead">Cảm ơn quý khách đã ghé thăm WebSite. Nếu quý khách có bất cứ thắt mắc nào xin liên hệ địa chỉ bên dưới?</p>
+                    <p class="lead">Cảm ơn quý khách đã ghé thăm WebSite. Nếu quý khách có bất cứ thắc mắc nào xin liên hệ địa chỉ bên dưới?</p>
 
                     <hr>
 
