--- a/DamvayShop.Web/Views/Post/Index.cshtml
+++ b/DamvayShop.Web/Views/Post/Index.cshtml
@@ -24,7 +24,7 @@
                 <ul class="breadcrumb">
 
                     <li>
-                        <a href="#">Home</a>
+                        <a href="/index.html">Home</a>
                     </li>
                     <li>@Category.Name</li>
                 </ul>
