--- a/DamvayShop.Web/Views/Checkout/Index.cshtml
+++ b/DamvayShop.Web/Views/Checkout/Index.cshtml
@@ -8,7 +8,7 @@
 }
 @section JavaScriptLayout {
 
-    @Scripts.Render("~/js/shoppingcart");
+    @Scripts.Render("~/js/shoppingcart")
 }
 
 <div id="all ">
