--- a/DamvayShop.Web/Views/Shared/Layouts.cshtml
+++ b/DamvayShop.Web/Views/Shared/Layouts.cshtml
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-
+    <meta name="google-site-verification" content="JT235G7Wys2saI0N_kqum0I2lqkPjqVkQHuHi_Z8NSY" />
     <meta charset="utf-8">
     <meta name="robots" content="all,follow">
- 
+
     <title>
         @ViewBag.Title
     </title>
@@ -32,7 +32,7 @@
 
     <script src="/Assets/client/js/respond.min.js"></script>
 
-    <link rel="shortcut icon" href="favicon.png">
+    <link rel="shortcut icon" href="http://damvay.vn/favicon.ico">
 
 
 
@@ -77,8 +77,8 @@
         <script src="/Assets/client/js/bootstrap-hover-dropdown.js"></script>
         <script src="/Assets/client/js/owl.carousel.min.js"></script>
         <script src="/Assets/client/js/front.js"></script>*@
-    @Scripts.Render("~/js/jquery");
-    @Scripts.Render("~/js/plugins");
+    @Scripts.Render("~/js/jquery")
+    @Scripts.Render("~/js/plugins")
 
 
     @RenderSection("JavaScriptLayout", required: false)
