image reponsive tinymce

--- a/DamvayShop.Web/Assets/client/css/style.default.css
+++ b/DamvayShop.Web/Assets/client/css/style.default.css
@@ -1675,5 +1675,12 @@ address {
     font-size: 200%;
 }
 
+@media (max-width: 900px) {
+    #post-content img {
+        width: 100%;
+        height: auto;
+    }
+}
+
 
 
