--- a/DamvayShop.Web/Views/Product/Detail.cshtml
+++ b/DamvayShop.Web/Views/Product/Detail.cshtml
@@ -123,7 +123,7 @@
                 {
                     <div class="row same-height-row">
                         <div class="col-md-12">
-                            <h3>Sản phầm liên quan</h3>
+                            <h3>Sản phẩm liên quan</h3>
                         </div>
 
 
